force-app/main/default/objects/Service__c/fields/AttendanceFieldSet__c.field-meta.xml
<CustomField>
    <fullName>AttendanceFieldSet__c</fullName>
    <label>Attendance Field Set</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Attendance_Service_Deliveries</fullName>
                <default>true</default>
                <label>Attendance Service Deliveries</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>