force-app/main/default/objects/Service__c/fields/Program__c.field-meta.xml
<!--
  ~ /*
  ~  * Copyright (c) 2020, salesforce.com, inc.
  ~  * All rights reserved.
  ~  * SPDX-License-Identifier: BSD-3-Clause
  ~  * For full license text, see the LICENSE file in the repo root or https://opensource.org/licenses/BSD-3-Clause
  ~  */
  -->

<CustomField>
    <fullName>Program__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Program</label>
    <referenceTo>Program__c</referenceTo>
    <relationshipLabel>Services</relationshipLabel>
    <relationshipName>Services</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>