force-app/main/default/objects/Service__c/fields/ServiceDeliveryFieldSet__c.field-meta.xml
<CustomField>
    <fullName>ServiceDeliveryFieldSet__c</fullName>
    <label>Service Delivery Field Set</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bulk_Service_Deliveries</fullName>
                <default>true</default>
                <label>Bulk Service Deliveries</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>