force-app/main/default/objects/Service__c/fields/UnitOfMeasure__c.field-meta.xml
<CustomField>
    <fullName>UnitOfMeasure__c</fullName>
    <label>Unit of Measure</label>
    <length>255</length>
    <type>Text</type>
</CustomField>