force-app/main/default/objects/Service__c/fields/UnitOfMeasurement__c.field-meta.xml
<CustomField>
    <fullName>UnitOfMeasurement__c</fullName>
    <description>The unit used to track the service. For example: hours, meals, sessions, deliveries, kits, etc. Defining a Unit of Measurement standardizes how you measure the delivery of the service.</description>
    <inlineHelpText>The unit used to track the service. For example: hours, meals, sessions, deliveries, kits, etc. Defining a Unit of Measurement standardizes how you measure the delivery of the service.</inlineHelpText>
    <label>Unit of Measurement</label>
    <length>255</length>
    <type>Text</type>
</CustomField>