force-app/main/default/objects/Service__c/fields/UnitOfService__c.field-meta.xml
<CustomField>
    <fullName>UnitOfService__c</fullName>
    <label>Unit of Service</label>
    <length>255</length>
    <type>Text</type>
</CustomField>